--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,40 +4,39 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk(conf.compileSdk)
 
     defaultConfig {
-        applicationId "ba.rubicon.pairprogramming"
-        minSdk 23
-        targetSdk 31
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId(conf.applicationId)
+        minSdk(conf.minSdk)
+        targetSdk(conf.targetSdk)
+        testInstrumentationRunner(conf.testInstrumentationRunner)
+        versionCode(1)
+        versionName("0.0.1")
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled(false)
+            proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility(conf.javaCompileCompatibility)
+        targetCompatibility(conf.javaCompileCompatibility)
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = conf.jvmTarget
     }
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation androidLib.ktx
+    implementation androidLib.material
+    implementation androidLib.appCompat
+    testImplementation testLib.junit4
+    androidTestImplementation testLib.junitIntegration
+    androidTestImplementation testLib.espresso
 }
